# TBot

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: pages.yml
docs/: app.js  game.js  index.html  script.js  style.css  styles.css
docs_old/: script.js
echo_bot/: __init__.py  __main__.py
hello_world/: __init__.py  __main__.py
mini_app/: __init__.py  __main__.py
phaser_bird/: PHASER_DOCS.md  index.html  main.js
tests/: test_echo_bot.py
