[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hello_world"
version = "0.1.0"
description = "A minimal Python project that prints hello world"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Codex"}]
dependencies = [
    "aiogram>=3,<4",
    "fastapi",
    "uvicorn",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["hello_world", "echo_bot", "mini_app"]

[project.scripts]
hello-world = "hello_world.__main__:main"
echo-bot = "echo_bot.__main__:main"
mini-app = "mini_app.__main__:main"

[project.optional-dependencies]
test = ["pytest>=7", "pytest-asyncio"]

[tool.pytest.ini_options]
addopts = "-ra"
