[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tbot"
version = "0.2.0"
description = "A minimal Telegram echo bot project"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Codex"}]
dependencies = ["aiogram>=3,<4"]

[tool.setuptools.packages.find]
where = ["."]
include = ["echo_bot"]

[project.scripts]
echo-bot = "echo_bot.__main__:main"

[project.optional-dependencies]
test = ["pytest>=7", "pytest-asyncio"]

[tool.pytest.ini_options]
addopts = "-ra"
